--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "swiper": "^11.0.5"
   }
 }
