--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
