--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "classnames": "^2.5.1",
     "json-server": "^1.0.0-alpha.23",
     "next": "14.1.0",
     "numeral": "^2.0.6",
